test/invalid/print_in_class_body.py
class Base:
    x: int = 1